; ModuleID = '/home/carl/AnghaBench/libgit2/tests/repo/extr_head.c_test_repo_head__set_head_Attaches_HEAD_when_the_reference_points_to_a_branch.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/repo/extr_head.c_test_repo_head__set_head_Attaches_HEAD_when_the_reference_points_to_a_branch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"refs/heads/br2\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_repo_head__set_head_Attaches_HEAD_when_the_reference_points_to_a_branch() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @repo, align 4
  %3 = call i32 @git_repository_set_head(i32 %2, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = load i32, i32* @repo, align 4
  %6 = call i32 @git_repository_head_detached(i32 %5)
  %7 = call i32 @cl_assert_equal_i(i32 0, i32 %6)
  %8 = load i32, i32* @repo, align 4
  %9 = call i32 @git_repository_head(i32** %1, i32 %8)
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = load i32*, i32** %1, align 8
  %12 = call i32 @git_reference_name(i32* %11)
  %13 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %12)
  %14 = load i32*, i32** %1, align 8
  %15 = call i32 @git_reference_free(i32* %14)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_set_head(i32, i8*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_repository_head_detached(i32) #1

declare dso_local i32 @git_repository_head(i32**, i32) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #1

declare dso_local i32 @git_reference_name(i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
